--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,8 +16,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="add-member.html">Members</a></li>
                 <li><a href="add-role.html">Roles</a></li>
-                <li><a href="#">Meetings</a></li>
-                <li><a href="#">Reports</a></li>
+                <li><a href="Meeting.html">Meetings</a></li>
+                <li><a href="reports.html">Reports</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
         </nav>
