--- a/src/main/resources/static/Meeting.html
+++ b/src/main/resources/static/Meeting.html
@@ -77,8 +77,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="add-member.html">Members</a></li>
                 <li><a href="add-role.html">Roles</a></li>
-                <li><a href="#">Meetings</a></li>
-                <li><a href="#">Reports</a></li>
+                <li><a href="Meeting.html">Meetings</a></li>
+                <li><a href="reports.html">Reports</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
         </nav>
@@ -95,34 +95,17 @@
         <h2>Schedule Meeting</h2>
         <form id="meetingForm">
             <div class="form-group">
+                <label for="meetingNumber">Meeting Number:</label>
+                <input type="number" class="form-control" id="meetingNumber" name="meetingNumber" required>
+            </div>
+
+            <div class="form-group">
                 <label for="meetingDate">Meeting Date:</label>
                 <input type="date" class="form-control" id="meetingDate" name="meetingDate" required>
             </div>
             <div class="form-group">
                 <label for="meetingTime">Meeting Time:</label>
                 <input type="time" class="form-control" id="meetingTime" name="meetingTime" required>
-            </div>
-            <div class="form-group">
-                <label for="memberShipTitle">Membership Title:</label>
-                <select class="form-control" id="memberShipTitle" name="memberShipTitle" required>
-                    <option value="All">All</option>
-                    <option value="Specific">Specific</option>
-                </select>
-            </div>
-
-            <!-- Role-Member Pairing Section -->
-            <div class="pair-container">
-                <h3>Allocate Role to Member</h3>
-                <div class="dropdown-container">
-                    <select id="memberSelect" class="dropdown">
-                        <!-- Members will be loaded here -->
-                    </select>
-                    <select id="roleSelect" class="dropdown">
-                        <!-- Roles will be loaded here -->
-                    </select>
-                </div>
-                <button type="button" class="button" onclick="addPair()">Add Pair</button>
-                <div class="pair-list" id="pairList"></div>
             </div>
             <button type="submit" class="btn btn-primary" style="width: 100%;">Schedule</button>
         </form>
@@ -146,95 +129,43 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        // Function to add a pair to the list
-        function addPair() {
-            const memberSelect = document.getElementById('memberSelect');
-            const roleSelect = document.getElementById('roleSelect');
-            const pairList = document.getElementById('pairList');
+        document.getElementById('meetingForm').addEventListener('submit', function (event) {
+            event.preventDefault();
 
-            const selectedMemberId = memberSelect.value;
-            const selectedMemberName = memberSelect.options[memberSelect.selectedIndex].text;
-            const selectedRoleId = roleSelect.value;
-            const selectedRoleName = roleSelect.options[roleSelect.selectedIndex].text;
+            const meetingNumber = document.getElementById('meetingNumber').value;
+            const meetingDate = document.getElementById('meetingDate').value;
+            const meetingTime = document.getElementById('meetingTime').value;
 
-            if (selectedMemberId && selectedRoleId) {
-                // Create a new pair item
-                const pairItem = document.createElement('div');
-                pairItem.className = 'pair-item';
-                pairItem.innerHTML = `${selectedMemberName} - ${selectedRoleName} <button class="remove-button" onclick="removePair(this)">Remove</button>`;
-                pairList.appendChild(pairItem);
+            // Convert date and time to LocalDateTime
+            const meetingDateTime = `${meetingDate}T${meetingTime}`;
 
-                // Reset the dropdowns after adding the pair
-                memberSelect.selectedIndex = 0;
-                roleSelect.selectedIndex = 0;
-            } else {
-                alert('Please select both a member and a role.');
-            }
-        }
+            fetch('http://localhost:8081/api/meeting', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    meetingNumber,
+                    meetingDate: meetingDate,
+                    meetingTime: meetingDateTime
+                })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert('Meeting scheduled successfully!');
 
-        // Function to remove a pair from the list
-        function removePair(button) {
-            const pairItem = button.parentElement;
-            pairItem.remove();
-        }
-
-        $(document).ready(function () {
-            // Function to fetch members from the API using fetch
-            function fetchMembers() {
-                fetch('http://localhost:8081/api/member', { method: 'GET' })
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error('Network response was not ok');
-                        }
-                        return response.json();
-                    })
-                    .then(data => {
-                        // Transform data to include memberName
-                        const transformedData = data.map(member => ({
-                            name: `${member.firstName} ${member.lastName}` // Concatenate firstName and lastName
-                        }));
-                        populateDropdown('memberSelect', transformedData, 'name');
-                    })
-                    .catch(error => {
-                        console.error('Error fetching members:', error);
-                    });
-            }
-
-            // Function to fetch roles from the API using fetch
-            function fetchRoles() {
-                fetch('http://localhost:8081/api/week-roles', { method: 'GET' })
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error('Network response was not ok');
-                        }
-                        return response.json();
-                    })
-                    .then(data => {
-                        const transformedData = data.map(role => ({
-                            roleName: role.roleName 
-                        }));
-                        populateDropdown('roleSelect', transformedData, 'roleName');
-                    })
-                    .catch(error => {
-                        console.error('Error fetching roles:', error);
-                    });
-            }
-
-            // Function to populate a dropdown with fetched data
-            function populateDropdown(selectId, data, textField) {
-                const selectElement = document.getElementById(selectId);
-                selectElement.innerHTML = '';
-
-                data.forEach(item => {
-                    const option = document.createElement('option');
-                    option.textContent = item[textField];
-                    selectElement.appendChild(option);
+                    const targetWindow = window.open('', '_blank'); 
+                    targetWindow.postMessage({
+                        meetingNumber: meetingNumber,
+                        meetingDate: meetingDate,
+                        meetingTime: meetingTime
+                    }, 'http://127.0.0.1:5501/src/main/resources/static/member-dashboard.html'); 
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('Error scheduling meeting. Please try again.');
                 });
-            }
 
-            // Initialize dropdowns when the page loads
-            fetchRoles();
-            fetchMembers();
         });
 
     </script>
