--- a/src/main/resources/static/AssignRole.html
+++ b/src/main/resources/static/AssignRole.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assign Roles</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
     <style>
         .pair-container {
             margin: 20px auto;
@@ -90,7 +91,7 @@
     </header>
 
       <!-- Role-Member Pairing Section -->
-      <div class="pair-container">
+      <div class="pair-container" style="margin-top:5em">
         <h3>Allocate Role to Member</h3>
         <div class="dropdown-container">
             <select id="memberSelect" class="dropdown">
