--- a/src/main/resources/static/Membership.html
+++ b/src/main/resources/static/Membership.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Role Tracker - Manage Memberships</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
     </header>
 
     <!-- Membership Management Section -->
-    <section class="membership-management" style="padding: 0px 30px;">
+    <section class="membership-management" style="padding: 0px 30px; margin-top:5em;">
         <h2>Manage Memberships</h2>
         <button class="btn btn-primary" onclick="showAddMembershipForm()">Add New Membership</button>
 
