--- a/src/main/resources/static/add-role.html
+++ b/src/main/resources/static/add-role.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add New Role</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -95,7 +96,7 @@
     </header>
 
     <!-- Role-Member Pairing Section -->
-    <div class="pair-container">
+    <div class="pair-container" style="margin-top:7em">
         <h3>Allocate Role to Member</h3>
         <div class="form-group">
             <label for="meetingNumber">Meeting Number:</label>
