--- a/src/main/resources/static/reports.html
+++ b/src/main/resources/static/reports.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reports - Role Tracking System</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
@@ -58,7 +59,7 @@
     </header>
 
     <main>
-        <section class="reports">
+        <section class="reports" style="margin-top:5em">
             <h1>Reports</h1>
             <div class="container">
                 <div class="row">
