--- a/src/main/resources/static/Account.html
+++ b/src/main/resources/static/Account.html
@@ -6,6 +6,17 @@
     <title>Member Account Management</title>
     <link rel="stylesheet" href="style.css">
     <style>
+                header{
+            padding: 30px;
+            border-radius: 10px;
+            height: 10px;
+            width: 100%;
+            font-size: 20px;
+            background: linear-gradient(135deg, #6e45e2, #88d3ce);
+        }
+        header .logo{
+            font-size: 30px;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
