--- a/src/main/resources/static/member-login.html
+++ b/src/main/resources/static/member-login.html
@@ -68,7 +68,7 @@
             .then(data => {
                 if (data.success) {
                     // Redirect to member dashboard
-                    window.location.href = `member-dashboard.html/${memberNumber}`;
+                    window.location.href = `member-dashboard.html?memberNumber=${memberNumber}`;
                 } else {
                     alert('Invalid member number');
                 }
